<resources>
    <string name="app_name">Choose The Best One</string>
    <string name="vs_text">VS</string>
    <string name="first_img_description">first image</string>
    <string name="second_img_description">second image</string>
    <string name="winner_img_description">winner image</string>
    <string name="list_icon_description">list icon</string>
    <string name="round">round</string>
    <string name="back_to_quizzes">OK</string>
    <string name="winner_title">Winner</string>
    <string name="view_stats">View Stats</string>
    <string name="search_hint">search…</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort">Sort</string>
    <string name="licenses">Licenses</string>
    <string name="about">About</string>
    <string name="sort_by_results">Sort by results</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="unable_to_get_super_categories">Unable to get super categories</string>
    <string name="unable_to_get_categories">Unable to get categories</string>
    <string name="unable_to_get_quiz_list">Unable to get quiz list</string>
    <string name="unable_to_get_quiz">Unable to get quiz</string>
    <string name="unable_to_get_stats">Unable to get stats</string>
    <string name="unable_to_post_winner">Unable to post winner</string>
    <string name="quiz_updated_on_server">Quiz was updated</string>
    <string name="retry_loading">Retry Loading</string>
    <string name="top_snack_bar_icon_description">Top Snack Bar icon</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="final_round">Final</string>
    <string name="results">Results</string>
    <string name="top_4">Recent Top 4</string>
    <string name="all">All</string>
    <string name="default_quiz_description">Choose the best one</string>
    <string name="disclaimer">This application is for entertainment purposes only and is not intended to offend anyone,
         all provided materials are not aimed at insulting, belittling human dignity. The app is recommended for people at least 18 years old.</string>
    <string name="collaboration_text">For cooperation contact:\nKuvaldin Andrey Igorevich\nandy.kuvaldin@yandex.ru</string>
    <string name="licenses_title">Free Licenses For Development:</string>
    <string name="licenses_text"><font color="#ffe785"><u>MinIO</u></font> - Apache V2 license and Affero General Public License Version 3 (AGPLv3);\n
                                 <font color="#ffe785"><u>Glide</u></font> - MIT License;\n
                                 <font color="#ffe785"><u>Retrofit2</u></font> - Apache License, Version 2.0;\n
                                 <font color="#ffe785"><u>Django</u></font> - 3-clause license ("BSD License 2.0", "Revised BSD License", "New BSD License", or "Modified BSD License")</string>
</resources>
