<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.core.content.ContextCompat"/>
        <import type="com.rkhrapunov.core.domain.RenderState.VersusState"/>
        <variable
            name="versusState"
            type="VersusState" />
        <variable
            name="dataReady"
            type="Boolean" />
        <variable
            name="round"
            type="String" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232323"
    tools:context=".presentation.main.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/first_img"
        android:id="@+id/round_description"
        android:text="@{round}"
        android:textColor="#e6e6e6"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/round"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/first_img"
        android:onClick="onFirstImgClicked"
        app:layout_constraintBottom_toTopOf="@id/first_img_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_description"
        app:cardCornerRadius="8dp">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:id="@+id/first_image_id"
            android:src="@{dataReady ? ContextCompat.getDrawable(context, versusState.firstImgResId) : @drawable/empty_drawable}"
            android:contentDescription="@string/first_img_description"
            tools:src="@drawable/charlize_theron"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/first_img_description"
        android:text="@{versusState.firstImgDescription}"
        android:textColor="#b8c8ea"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@id/vs_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_img"
        tools:text="@string/first_img_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/second_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_img_description"
        android:id="@+id/vs_text_view"
        android:text="@string/vs_text"
        android:textColor="#e6e6e6"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/second_img"
        android:onClick="onSecondImgClicked"
        app:layout_constraintBottom_toTopOf="@id/second_img_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vs_text_view"
        app:cardCornerRadius="8dp">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/second_image_id"
            android:scaleType="centerCrop"
            android:src="@{dataReady ? ContextCompat.getDrawable(context, versusState.secondImgResId) : @drawable/empty_drawable}"
            android:contentDescription="@string/second_img_description"
            tools:src="@drawable/jennifer_lawrence"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_img"
        android:id="@+id/second_img_description"
        android:text="@{versusState.secondImgDescription}"
        android:textColor="#b8c8ea"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/second_img_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>